--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,5 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#62A8A4"
-    tools:context=".MainActivity"/>
+    android:background="#62A8A4"/>
+    <!--tools:context=".MainActivity"-->
