--- a/app/src/main/res/layout/reproductor.xml
+++ b/app/src/main/res/layout/reproductor.xml
@@ -7,7 +7,7 @@
     android:background="#62A8A4">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/reproductor_default"
         android:layout_width="304dp"
         android:layout_height="343dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,5 +17,64 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.187"
         app:srcCompat="@drawable/cassete" />
+
+    <Button
+        android:id="@+id/boton_atras"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="169dp"
+        android:background="@drawable/img_previous"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/boton_play"
+        app:layout_constraintStart_toEndOf="@+id/boton_stop" />
+
+    <Button
+        android:id="@+id/boton_adelante"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="169dp"
+        android:background="@drawable/img_next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/boton_repeat"
+        app:layout_constraintStart_toEndOf="@+id/boton_play" />
+
+    <Button
+        android:id="@+id/boton_play"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="169dp"
+        android:background="@drawable/img_play"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/boton_repeat"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="169dp"
+        android:background="@drawable/img_repeat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/boton_adelante" />
+
+    <Button
+        android:id="@+id/boton_stop"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="169dp"
+        android:background="@drawable/img_stop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/boton_atras"
+        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
